Fixed the weird spacing in editor page

--- a/styling/assets_custome/css/quizEditor_custome.css
+++ b/styling/assets_custome/css/quizEditor_custome.css
@@ -225,7 +225,13 @@ div.orderDiv
 
 div
 {
+  vertical-align: middle !important;
+}
 
+tbody,
+tr,
+td{
+  vertical-align: middle !important;
 }
 
 
